RESOLVED FIXED48735
Visited links not populated correctly in new web processes after the first
https://bugs.webkit.org/show_bug.cgi?id=48735
Summary Visited links not populated correctly in new web processes after the first
Darin Adler
Reported 2010-10-31 12:49:13 PDT
Visited links not populated correctly in new web processes after the first
Attachments
Patch (5.49 KB, patch)
2010-10-31 12:55 PDT, Darin Adler
no flags
Patch (5.53 KB, patch)
2010-10-31 12:56 PDT, Darin Adler
mitz: review+
Darin Adler
Comment 1 2010-10-31 12:55:30 PDT
Darin Adler
Comment 2 2010-10-31 12:56:33 PDT
Darin Adler
Comment 3 2010-10-31 13:21:14 PDT
Note You need to log in before you can comment on or make changes to this bug.