2010-10-31  Darin Adler  <darin@apple.com>

Reviewed by Dan Bernstein.

        Visited links not populated correctly in new web processes after the first
        https://bugs.webkit.org/show_bug.cgi?id=48735
        rdar://problem/8442177

        * UIProcess/VisitedLinkProvider.cpp:
        (WebKit::VisitedLinkProvider::VisitedLinkProvider): Initialize
        m_webProcessHasVisitedLinkState.
        (WebKit::VisitedLinkProvider::processDidFinishLaunching): Renamed
        from populateVisitedLinksIfNeeded. Set m_webProcessHasVisitedLinkState
        to false, since this is a new process, and also start the timer
        so the visited links messages will be sent.
        (WebKit::VisitedLinkProvider::processDidClose): Renamed from
        stopVisitedLinksTimer.
        (WebKit::VisitedLinkProvider::pendingVisitedLinksTimerFired):
        Added logic so we send SetVisitedLinkTable and
        AllVisitedLinkStateChanged once to each new process and to set
        m_webProcessHasVisitedLinkState to true once that is done.

        * UIProcess/VisitedLinkProvider.h: Updated for above changes.

        * UIProcess/WebContext.cpp:
        (WebKit::WebContext::processDidFinishLaunching): Called
        VisitedLinkProvider function under its new name. Also used
        ASSERT_UNUSED rather than ASSERT since the argument is used
        only for the assertion.
        (WebKit::WebContext::processDidClose): Ditto.


Canonical link: https://commits.webkit.org/61495@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70997 268f45cc-cd09-0410-ab3c-d52691b4dbfc