WebKit2/UIProcess/VisitedLinkProvider.cpp
@@ -39,14 +39,20 @@ static const int VisitedLinkTableMaxLoad = 2;
 VisitedLinkProvider::VisitedLinkProvider(WebContext* context)
     : m_context(context)
     , m_visitedLinksPopulated(false)
+    , m_webProcessHasVisitedLinkState(false)
     , m_keyCount(0)
     , m_tableSize(0)
     , m_pendingVisitedLinksTimer(RunLoop::main(), this, &VisitedLinkProvider::pendingVisitedLinksTimerFired)
 {
 }
 
-void VisitedLinkProvider::populateVisitedLinksIfNeeded()
+void VisitedLinkProvider::processDidFinishLaunching()
 {
+    m_webProcessHasVisitedLinkState = false;
+
+    if (m_keyCount)
+        m_pendingVisitedLinksTimer.startOneShot(0);
+
     if (m_visitedLinksPopulated)
         return;
 
@@ -63,7 +69,7 @@ void VisitedLinkProvider::addVisitedLink(LinkHash linkHash)
         m_pendingVisitedLinksTimer.startOneShot(0);
 }
 
-void VisitedLinkProvider::stopVisitedLinksTimer()
+void VisitedLinkProvider::processDidClose()
 {
     m_pendingVisitedLinksTimer.stop();
 }
@@ -149,7 +155,7 @@ void VisitedLinkProvider::pendingVisitedLinksTimerFired()
 
     m_keyCount += pendingVisitedLinks.size();
 
-    if (currentTableSize != newTableSize) {
+    if (!m_webProcessHasVisitedLinkState || currentTableSize != newTableSize) {
         // Send the new visited link table.
         
         SharedMemory::Handle handle;
@@ -160,13 +166,14 @@ void VisitedLinkProvider::pendingVisitedLinksTimerFired()
     }
     
     // We now need to let the web process know that we've added links.
-    if (addedVisitedLinks.size() <= 20) {
+    if (m_webProcessHasVisitedLinkState && addedVisitedLinks.size() <= 20) {
         m_context->process()->send(Messages::WebProcess::VisitedLinkStateChanged(addedVisitedLinks), 0);
         return;
     }
     
     // Just recalculate all the visited links.
     m_context->process()->send(Messages::WebProcess::AllVisitedLinkStateChanged(), 0);
+    m_webProcessHasVisitedLinkState = true;
 }
 
 } // namespace WebKit
